Update one-step install to use --recursive, add upgrade script

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: 'http://example.org/'
 languageCode: 'en-us'
 title: 'My Personal Site'
-theme: 'hugo-theme-stack'
+theme: 'gohugo-theme-ananke'
 
 params:
   sidebar:
