--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hugo-site",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npx tinacms dev --host 0.0.0.0 --port 4001 --command \"hugo server --bind 0.0.0.0 --port 1313\"",
+    "dev": "npx tinacms dev --port 4001 --command \"hugo server --bind 0.0.0.0 --port 1313\"",
     "build": "npx tinacms build",
     "start": "hugo server"
   },
