--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: 'https://necloud.us/'
 languageCode: 'en-us'
 title: 'necloud'
-theme: 'hugo-theme-stack'
+theme: 'gohugo-theme-ananke'
 
 params:
   sidebar:
